Fixed down arrow horizontal align. Fixed portfolio navbar hover effect.

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ a:hover {
 }
 
 #AboutMe, #Experience, #Education, #Skills, #Portfolio {
-    min-height: 50vh;
+    min-height: 80vh;
 }
 
 
@@ -204,18 +204,16 @@ li.nav-item:hover > a {
 
 .hero-down {
   position: absolute;
+  margin: 0 -13px;
   top: 90vh;
   font-size: 2em;
   height: 2em;
-  width: 4rem;
   color: #f5f5f5;
   border-radius: 100%;
 }
 
 .hero-down:hover {
-  color: #000000;
-  background-color: #ffffff;
-  border-radius: 50px;
+  color: #ffffff;
 }
 
 .hero-down i {
